--- a/style.css
+++ b/style.css
@@ -1,233 +1,14 @@
-/* ==================== BASE ==================== */
-
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap');
-:root {
-    font-size: 16px;
-    --main-clr: #0B090A;
-    --off-main-clr: #121011;
-    --sec-clr: white;
-    --off-sec-clr: #d3d3d3;
+* {
+    font-family: Roboto;
+    background-color: steelblue;
 }
 
-*,
-*::after,
-*::before {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-    font-family: "Montserrat";
-    font-weight: bold;
+h1 {
+    text-align: center;
     color: white;
+    font-size: 40px;
 }
 
-html {
-    scroll-behavior: smooth;
-}
-
-a {
-    color: var(--off-sec-clr);
-    text-decoration: none;
-    transition: 0.2s;
-}
-
-a:hover {
-    cursor: pointer;
-    color: var(--sec-clr);
-    transition: 0.2s;
-}
-
-li {
-    list-style: none;
-}
-
-
-/* ==================== WEBSITE ==================== */
-
-
-/* ========== HEADER ========== */
-
-header {
-    min-height: 80px;
-    background-color: var(--main-clr);
-    background-image: url(./Images/Wigglie\ thing.png);
-    background-size: cover;
-    padding: 20px;
-    position: sticky;
-    top: 0;
-    z-index: 1;
-    box-shadow: 0 6px 4px -2px var(--main-clr);
-}
-
-nav {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.logo {
-    height: 40px;
-    width: 240px;
-    flex-grow: 1;
-    display: flex;
-    align-items: center;
-}
-
-.logo:hover {
-    cursor: pointer;
-}
-
-.nav-list {
-    display: flex;
-    flex-direction: row;
-}
-
-.item {
-    padding: 0 40px;
-    font-size: 25px;
-    list-style: none;
-}
-
-.nav-menu-button {
-    display: none;
-}
-
-
-/* ========== PAGE ========== */
-
-.page {
-    display: flex;
-    flex-direction: row;
-}
-
-
-/* ========== MAIN ========== */
-
-main {
-    background-color: var(--off-main-clr);
-    display: flex;
-    justify-content: center;
-}
-
-.page-title {
-    padding: 20px 0 0 33px;
-    font-size: 3rem;
-}
-
-.videos-grid {
-    padding: 30px;
-    margin-right: auto;
-    margin-left: auto;
-    display: grid;
-    gap: 1rem;
-    grid-template-columns: repeat(5, 216px);
-    grid-auto-rows: 1fr;
-}
-
-.video {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}
-
-.video-thumbnail {
-    border: var(--sec-clr) 3px solid;
-    border-radius: 2px;
-}
-
-.video-thumbnail:hover {
-    cursor: pointer;
-}
-
-.video-title {
+.form h1 {
     text-align: left;
-    font-weight: 600;
-    margin-top: 15px;
-}
-
-.video-title:hover {
-    cursor: pointer;
-}
-
-
-/* ========== RESPONSIVE DESIGN ========== */
-
-@media screen and (max-width: 1695px) {
-    .videos-grid {
-        grid-template-columns: repeat(4, 216px);
-    }
-}
-
-@media screen and (max-width: 1455px) {
-    .videos-grid {
-        grid-template-columns: repeat(3, 216px);
-    }
-}
-
-@media screen and (max-width: 1065px) {
-    .videos-grid {
-        grid-template-columns: repeat(2, 216px);
-    }
-}
-
-@media screen and (max-width: 800px) {
-    .page-title {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        padding-left: 0;
-    }
-    .videos-grid {
-        grid-template-columns: repeat(1, 216px);
-    }
-    header {
-        display: flex;
-        align-items: center;
-    }
-    .nav {
-        width: 100%;
-    }
-    .logo {
-        flex-grow: 1;
-        height: 45px;
-        width: 135px;
-    }
-    .logo>img {
-        height: 45px;
-        width: 135px;
-    }
-    .nav-list {
-        display: none;
-    }
-    .nav-menu-button {
-        display: flex;
-        font-size: 2rem;
-        padding-right: 20px;
-    }
-    .nav-menu-button:hover {
-        cursor: pointer;
-    }
-    ion-icon {
-        align-items: center;
-        justify-content: center;
-    }
-    .nav-menu {
-        position: fixed;
-        height: 0;
-        width: 250px;
-        background-color: var(--main-clr);
-        top: 80px;
-        right: 20px;
-        padding: 0;
-        z-index: 2;
-        overflow-x: hidden;
-        box-shadow: none;
-        border-radius: 4px;
-        transition: 0.5s;
-        overflow-y: hidden;
-    }
-    .item {
-        padding: 10px 0;
-        text-align: center;
-    }
 }
