--- a/style.css
+++ b/style.css
@@ -125,6 +125,7 @@ main {
 
 .video {
     display: flex;
+    padding-top: 20px;
     justify-content: center;
     align-items: center;
     flex-direction: column;
