--- a/style.css
+++ b/style.css
@@ -127,6 +127,7 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 20px;
     flex-direction: column;
 }
 
