--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ nav {
     align-items: center;
 }
 
-.sidebar-button {
+header .sidebar-button {
     font-size: 2rem;
     margin: 0 1.5rem;
 }
@@ -181,7 +181,6 @@ nav {
 
 .sidebar-header .sidebar-button {
     font-size: 2rem;
-    margin: 0 1.5rem;
 }
 
 .sidebar-header .sidebar-logo {
@@ -256,8 +255,7 @@ nav {
 /* ========== SIDEBAR FOOTER ========== */
 
 .sidebar-footer {
-    position: absolute;
-    bottom: 0;
+    margin-top: auto;
     display: flex;
     justify-content: space-around;
     width: 100%;
@@ -289,7 +287,7 @@ main {
     margin-left: auto;
     display: grid;
     gap: 1rem;
-    grid-template-columns: repeat(auto, 216px);
+    grid-template-columns: repeat(5, 216px);
     grid-auto-rows: 1fr;
 }
 
