--- a/style.css
+++ b/style.css
@@ -67,6 +67,23 @@ li {
     transition: 0.2s;
 }
 
+#preloader {
+    width: 100%;
+    height: 100vh;
+    background: var(--off-main-clr);
+    text-align: center;
+    z-index: 100;
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 3rem;
+    font-family: "Montserrat";
+    font-weight: 900;
+    text-transform: uppercase;
+    transition: 2s;
+}
+
 
 /* ========== HEADER ========== */
 
